--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+/* @components/blockchain/Blockchain.js */
+/* @components/settings/Settings.js */
+/* @components/transactions/CreateTransaction.js */
+/* @components/transactions/PendingTransactions.js */
+.container {
+  margin-top: 7rem;
+  left: 1rem;
+}
+
+/* @components/blockchain/Block.js */
 .card {
   width: 18rem;
   display: inline-block;
