--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,11 @@
 .card {
   width: 18rem;
   display: inline-block;
-  margin: 0 10px 0 0;
+  margin: 0 10px 10px 0;
+}
+
+/* @components/layout/Navbar.js */
+
+.btn-outline-light {
+  margin-right: 0.5rem;
 }
