--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,37 @@
 }
 
 /* @components/layout/Navbar.js */
-
 .btn-outline-light {
   margin-right: 0.5rem;
+}
+
+.collapse navbar-collapse {
+  position: relative;
+}
+
+.navbar-nav {
+  position: absolute;
+  right: 0;
+}
+
+@media only screen and (max-width: 992px) {
+  .navbar-nav {
+    position: relative;
+  }
+  .nav_btn {
+    width: 25%;
+    margin: 0.5rem 0;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .nav_btn {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  #nav_brand {
+    font-size: 0.9rem;
+  }
 }
